--- a/sass/components/_slogans-title.scss
+++ b/sass/components/_slogans-title.scss
@@ -1,5 +1,5 @@
 .slogans-title {
-    width: 270px;
+    width: 100%;
     color: var(--second-color);
     font-family: inherit;
     font-weight: normal;
