--- a/css/main.css
+++ b/css/main.css
@@ -259,11 +259,19 @@ body {
 }
 
 .slogans {
+  display: flex;
+  align-items: center;
   list-style-type: none;
 }
 
 .our-sence {
   padding-top: 94px;
+}
+
+.our-sence-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .our-list__item {
@@ -776,14 +784,14 @@ footer {
 }
 
 .container {
-  width: 100%;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
 }
 
 .slogans-title {
-  width: 100%;
+  width: 270px;
   color: var(--second-color);
   font-family: inherit;
   font-weight: normal;
