--- a/css/main.css
+++ b/css/main.css
@@ -259,8 +259,6 @@ body {
 }
 
 .slogans {
-  display: flex;
-  align-items: center;
   list-style-type: none;
 }
 
@@ -268,23 +266,12 @@ body {
   padding-top: 94px;
 }
 
-.our-sence-list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .our-list__item {
   display: block;
-  width: 270px;
-  height: 120px;
-  background-color: #F5F4FA;
+  width: 100%;
   border-radius: 4px;
-  padding: 25px 100px;
-}
-
-.our-list__item + .our-list__item {
-  margin-left: 30px;
+  margin-bottom: 30px;
+  background-color: crimson;
 }
 
 .slogans__item {
@@ -292,12 +279,9 @@ body {
   list-style-type: none;
 }
 
-.slogans__item:not(:last-child) {
-  margin-right: 30px;
-}
-
 .slogans__item-text {
-  width: 270px;
+  display: block;
+  text-align: center;
   color: var(--main-color);
   font-weight: bold;
   font-size: 14px;
@@ -305,6 +289,19 @@ body {
   text-transform: uppercase;
   margin-bottom: 10px;
   margin-top: 30px;
+}
+
+.our-container {
+  margin-bottom: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #F5F4FA;
+}
+
+.our-list__icon {
+  display: block;
+  margin: 0 auto;
+  padding: 25px auto;
 }
 
 .evocation {
@@ -784,19 +781,19 @@ footer {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
-  margin: 0 auto;
 }
 
 .slogans-title {
-  width: 270px;
+  width: 100%;
   color: var(--second-color);
   font-family: inherit;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
+  margin-bottom: 30px;
 }
 
 .regular-customers-title {
