--- a/sass/components/_slogans-title.scss
+++ b/sass/components/_slogans-title.scss
@@ -1,8 +1,9 @@
 .slogans-title {
-    width: 270px;
+    width: 100%;
     color: var(--second-color);
     font-family: inherit;
     font-weight: normal;
     font-size: 14px;
     line-height: 1.71;
+    margin-bottom: 30px;
 }
