--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -1,36 +1,36 @@
 .slogans {
-    @include align-list;
+    // @include align-list;
     list-style-type: none;
 }
 
 .our-sence {
     padding-top: 94px;
-    &-list {
-        @include align-list;
-        justify-content: center;
-    }
+    // &-list {
+    //     // @include align-list;
+    //     justify-content: center;
+    // }
 }
 
 .our-list__item {
     display: block;
-    width: 270px;
-    height: 120px;
-    background-color: #F5F4FA;
+    width: 100%;
     border-radius: 4px;
-    padding: 25px 100px;
-    &+& {
-        margin-left: 30px;
-    }
+    margin-bottom: 30px;
+    background-color: crimson;
+    // &+& {
+    //     margin-left: 30px;
+    // }
 }
 
 .slogans__item {
     width: 270px;
     list-style-type: none;
-    &:not(:last-child) {
-        margin-right: 30px;
-    }
+    // &:not(:last-child) {
+    //     margin-right: 30px;
+    // }
     &-text {
-        width: 270px;
+        display: block;
+        text-align: center;
         color: var(--main-color);
         font-weight: bold;
         font-size: 14px;
@@ -39,4 +39,17 @@
         margin-bottom: 10px;
         margin-top: 30px;
     }
+}
+
+.our-container {
+    margin-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: #F5F4FA;
+}
+
+.our-list__icon {
+    display: block;
+    margin: 0 auto;
+    padding: 25px auto;
 }
