--- a/css/main.css
+++ b/css/main.css
@@ -266,6 +266,26 @@ body {
   padding-top: 94px;
 }
 
+.our-sence-list {
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .our-sence-list {
+    display: flex;
+    justify-content: space-around;
+    align-content: first-start;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-sence-list {
+    align-content: space-between;
+    justify-content: space-between;
+  }
+}
+
 .our-list__item {
   display: block;
   width: 100%;
